--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
       rel="stylesheet"
       type="text/css"
     />
-
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -33,9 +33,7 @@
     <title>Trafalgar</title>
   </head>
   <body>
-    <noscript>
-      You need to enable JavaScript to run this app.
-    </noscript>
+    <noscript> You need to enable JavaScript to run this app. </noscript>
     <div id="root"></div>
   </body>
 </html>
